# coreutils

./: Cargo.toml  deny.toml  test
.github/workflows/: benchmarks.yml  ignore-intermittent.txt
src/uu/cat/src/: cat.rs
src/uu/chroot/: Cargo.toml
src/uu/chroot/src/: chroot.rs
src/uu/cp/src/: cp.rs
src/uu/cp/src/platform/: linux.rs
src/uu/date/src/: date.rs  format_modifiers.rs  locale.rs
src/uu/dd/src/: dd.rs
src/uu/env/src/: env.rs
src/uu/install/: Cargo.toml
src/uu/install/src/: install.rs
src/uu/kill/src/: kill.rs
src/uu/ls/src/: ls.rs
src/uu/mkdir/src/: mkdir.rs
src/uu/numfmt/: Cargo.toml
src/uu/numfmt/locales/: en-US.ftl  fr-FR.ftl
src/uu/numfmt/src/: format.rs  locale.rs  numfmt.rs  options.rs  units.rs
src/uu/paste/src/: paste.rs
src/uu/pr/src/: pr.rs
src/uu/rm/: Cargo.toml
src/uu/rm/src/: rm.rs
src/uu/rm/src/platform/: linux.rs
src/uu/seq/src/: seq.rs
src/uu/sort/: Cargo.toml
src/uu/sort/benches/: sort_locale_utf8_bench.rs
src/uu/sort/src/: chunks.rs  sort.rs  tmp_dir.rs
src/uu/tail/src/follow/: watch.rs
src/uu/touch/src/: touch.rs
src/uu/wc/src/: wc.rs
src/uu/wc/src/utf8/: mod.rs
src/uucore/src/lib/: features.rs  lib.rs
src/uucore/src/lib/features/: fs.rs  perms.rs  safe_traversal.rs  signals.rs  systemd_logind.rs  uptime.rs
src/uucore/src/lib/mods/: error.rs  (+1 more)
tests/by-util/: test_cat.rs  test_date.rs  test_dd.rs  test_df.rs  test_env.rs  test_factor.rs  test_fmt.rs  test_install.rs  test_numfmt.rs  test_pr.rs  test_rm.rs  test_seq.rs  test_sort.rs  test_tail.rs
util/: build-gnu.sh  why-error.md
