[package]
name = "uu_install"
description = "install ~ (uutils) copy files from SOURCE to DESTINATION (with specified attributes)"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/install"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/install.rs"

[dependencies]
clap = { workspace = true }
filetime = { workspace = true }
file_diff = { workspace = true }
selinux = { workspace = true, optional = true }
thiserror = { workspace = true }
uucore = { workspace = true, default-features = true, features = [
  "backup-control",
  "buf-copy",
  "fs",
  "mode",
  "perms",
  "entries",
  "process",
] }
fluent = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["dir", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[features]
selinux = ["dep:selinux", "uucore/selinux"]

[[bin]]
name = "install"
path = "src/main.rs"
